Adding changes to the functionality, changed structure with calling of SSHTool functionality in the classes

--- a/configuration/fedorapeople_cfg.yml
+++ b/configuration/fedorapeople_cfg.yml
@@ -1,6 +1,6 @@
 fedorapeople:
-  username: some_username
-  password: some_password
+  username: username
+  passwd: some_passwd
   ssh_path: /root/.ssh/some_key
   host: fedorapeople.org
 
