--- a/configuration/paths.yml
+++ b/configuration/paths.yml
@@ -1,5 +1,6 @@
 TESTING_DIR:              '/tmp/package_testing/upstream_first/'
 UPSTREAM_GIT_PATH:        'https://upstreamfirst.fedorainfracloud.org/'
+FEDORAPROJECT_PATH:       'https://src.fedoraproject.org/rpms/'
 FEDORAPEOPLE_DIR:         '/tmp/package_testing/fedorapeople'
 ATOMIC_IMAGE_URL:         'https://ftp-stud.hs-esslingen.de/pub/Mirrors/alt.fedoraproject.org/atomic/stable/Fedora-Atomic-26-20170707.1/CloudImages/x86_64/images/Fedora-Atomic-26-20170707.1.x86_64.qcow2'
 ARTIFACTS:                '/tmp/artifacts/'
